@@ -1,3 +1,10 @@
+2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>
+
+	Backport from mainline
+	2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* gcc.target/powerpc/pr52457.c: New test.
+
 2012-03-01  Kai Tietz  <ktietz@redhat.com>
 
 	* gcc.dg/torture/pr47917.c: Make test using POSIX-printf
